Quisk Version 4.2.30  March 2024
================================
A new option "Tx-Rx silence msec" on the Timing configuration screen controls how long
to suppress Rx audio when switching from Tx to Rx. The previous fixed time was 50 msec.

The SSB squelch control now works on CW too. Please test.

Quisk Version 4.2.29  January 2024
==================================
This version updates the FreeDV library files and program logic. I added a "Monitor"
item to the FreeDV menu. It routes the sound to the speakers instead of to the demodulator.
Turn on both the monitor and FDX to listen to your transmitted FreeDV signals. Please test.

Modes 700x and 1600 are finished. The other modes will be added shortly. If you use any of them
post here and I will move them to the top of the list.

Quisk Version 4.2.28  December 2023
===================================
This version includes a patch from Jon, AB8WU, to build Quisk on FreeBSD. Thanks Jon!
I fixed a bug in setting the AF level in Hamlib.

Quisk Version 4.2.27  December 2023
===================================
This release corrects the Hermes-Lite2 antenna tuner logic.  Jim, N1ADJ, has an
antenna tuner and is helping debug. Thanks Jim!

Quisk Version 4.2.26  December 2023
===================================
This release has support for the Hermes-Lite2 antenna tuner protocol. The tuner button is
on the last row of the screen at the left. Please test.

Quisk Version 4.2.25  November 2023
===================================
When using the Hermes-Lite2 at a remote location over WiFi, the Tx buffer may underflow.
I added another line to the Config/Status screen to show the number of Tx buffer errors.

Quisk Version 4.2.24  November 2023
===================================
You can now specify the WSJT-X option "--rig-name" on the Configure WSJT-X window. It used to be
fixed at "quisk". Please test.

I worked around a bug in wxPython that caused some screens to be too small. I polished the code