@@ -1,2 +1,2 @@
-#Quisk version 4.2.30
+#Quisk version 4.2.31
 from .quisk import main
